CRM-5047: Add tooltips to oro_system_configuration into groups block  - fix tooltip position when it's out of visible area

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -116,6 +116,10 @@ label, input, button, select, textarea { font-size:13px;}
   &.header-tooltips {
     display: inline;
     float: none;
+    .oro-popover-content {
+      line-height: 20px;
+      color: #777;
+    }
   }
 }
 .control-group .controls p.control-label{
